@@ -6920,3 +6920,6 @@ PACKAGE: 2.2.99.2
 
 2008-02-14 cjg
  * Added "billboard" div to input forms. Useful as a target for javascript.
+
+2008-02-14 cjg
+ * Added getEprintField to toolbox. 
